--- a/README.html
+++ b/README.html
@@ -15,7 +15,7 @@ Tested up to: 4.5</p>
 
 <h2 id="homebrewforbeaverbuilder">Homebrew for Beaver Builder</h2>
 
-<p>Beaver Brewer extends the Beaver Builder plugin by giving admins the ability to easily install &#8220;homebrew&#8221; modules. It also enables developers to release their modules in an a la carte fashion (no plugin wrapper needed) and even offer automatic updates to their modules through the Wordpress dashboard. You can <a href="http://beaverbrewer.com/downloads">download the plugin</a> and <a href="https://bitbucket.org/rbenhase1/example-bb-module-two-column-text-editor/get/master.zip">download an example module</a> right away to get started. </p>
+<p>Beaver Brewer extends the Beaver Builder plugin by giving admins the ability to easily install &#8220;homebrew&#8221; modules. It also enables developers to release their modules in an a la carte fashion (no plugin wrapper needed) and even offer automatic updates to their modules through the Wordpress dashboard. You can <a href="http://beaverbrewer.com/downloads">download the plugin</a> and <a href="http://beaverbrewer.com/modules">download some modules</a> right away to get started. </p>
 
 <p>Beaver Brewer is in active development and should be considered an alpha at this stage. For this reason, it is not yet recommended that you install it on a Production site. When more features are added to the plugin, an automatic update will appear in your Wordpress plugin admin page. </p>
 
@@ -115,13 +115,11 @@ Tested up to: 4.5</p>
 
 <h2 id="compatibilityrequirements">Compatibility Requirements</h2>
 
-<p>I plan on releasing complete online documentation for this plugin before it&#8217;s released into the wild, but the general rule for making your module compatible with Beaver Brewer is that you should avoid making it dependent on a parent plugin. If you follow the Beaver Builder custom module documentation (see <a href="https://www.wpbeaverbuilder.com/custom-module-documentation/">this page</a>), only skipping the very first part (about creating a plugin wrapper), you should be fine. The MY_MODULES_DIR and MY_MODULES_URL constants are defined by Beaver Brewer, and the init hook to load your module is already taken care of. You can see and download <a href="https://bitbucket.org/rbenhase1/example-bb-module-two-column-text-editor/">my example module</a> if you&#8217;re having trouble getting started. </p>
+<p>I plan on releasing complete online documentation for this plugin before it&#8217;s released into the wild, but the general rule for making your module compatible with Beaver Brewer is that you should avoid making it dependent on a parent plugin. If you follow the Beaver Builder custom module documentation (see <a href="https://www.wpbeaverbuilder.com/custom-module-documentation/">this page</a>), only skipping the very first part (about creating a plugin wrapper), you should be fine. The MY_MODULES_DIR and MY_MODULES_URL constants are defined by Beaver Brewer, and the init hook to load your module is already taken care of. You can see and download <a href="http://beaverbrewer.com/downloads">my plugin boilerplate</a> if you&#8217;re having trouble getting started. </p>
 
-<p>To enable automatic updates for your module, you can utilize the module.config file. For this, it&#8217;s best that you look at or <a href="https://bitbucket.org/rbenhase1/example-bb-module-two-column-text-editor/">download the example module</a> to begin with and adjust your settings as needed. </p>
+<p>To enable automatic updates for your module, you can utilize the module.config file. See <a href="http://beaverbrewer.com/module-config/">http://beaverbrewer.com/module-config/</a> for more info.</p>
 
-<hr />
-
-<h3 id="todo">To Do</h3>
+<h2 id="todo">To Do</h2>
 
 <p>There&#8217;s a lot more I&#8217;d like to do with this module in future versions. Here&#8217;s a few things:</p>
 
