--- a/README.html
+++ b/README.html
@@ -17,7 +17,7 @@ Tested up to: 4.5</p>
 
 <p>Beaver Brewer extends the Beaver Builder plugin by giving admins the ability to easily install &#8220;homebrew&#8221; modules. It also enables developers to release their modules in an a la carte fashion (no plugin wrapper needed) and even offer automatic updates to their modules through the Wordpress dashboard. You can <a href="http://beaverbrewer.com/downloads">download the plugin</a> and <a href="http://beaverbrewer.com/modules">download some modules</a> right away to get started. </p>
 
-<p>Beaver Brewer is in active development and should be considered an alpha at this stage. For this reason, it is not yet recommended that you install it on a Production site. When more features are added to the plugin, an automatic update will appear in your Wordpress plugin admin page. </p>
+<p>Beaver Brewer is in active development and should be considered a Beta at this stage. For this reason, you should be cautious about using it on a Production site. When more features are added to the plugin, an automatic update will appear in your Wordpress plugin admin page. </p>
 
 <hr />
 
@@ -45,7 +45,7 @@ Tested up to: 4.5</p>
 
 <h2 id="downloads">Downloads</h2>
 
-<p>You can <a href="http://beaverbrewer.com/downloads">download the latest version of Beaver Brewer here</a>. Keep in mind that Beaver Brewer is still considered to be in ALPHA; it is not yet recommended that you use it on a Production site.</p>
+<p>You can <a href="http://beaverbrewer.com/downloads">download the latest version of Beaver Brewer here</a>. Keep in mind that Beaver Brewer is still considered to be in the Beta stage; be careful about using it on a production site (and keep regular backups just in case).</p>
 
 <h2 id="installation">Installation</h2>
 
